# pinterest-app-sample

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
pinterest_app_sample/: __main__.py  auth.py  create_pin_no_auth_use_accesstoken.py
pinterest_app_sample/templates/: index.html  index_auth.html  index_no_auth_use_accesstoken.html
